# capstone

./: .gitignore  README.md  rust  secretmessage.txt
android-openssl/lib/: libcrypto.so.1.1  libssl.so.1.1
android-openssl/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
android-openssl/share/man/man1/: CA.pl.1  (+49 more)
c2-server/: gen_exploit.py  implant  implant-server.py  index.html  server.py  start.sh  test_client.py
c2-server/commands/: steal_database_timestamps.txt
c2-server/template/: payload.template  toast-debug.templtae  toast.template
exploit-stage1/: exploit.html  exploit.js  exploit2.js  exploit_backup.js
exploit-stage1/shellcode/: Makefile  shellcode  shellcode.elf  shellcode.s  shellcode2f.py
exploit-stage1/test/: test.js
implant/: Cargo.toml
implant/src/: main.rs  twitter.rs  utils.rs
piss-master/: Cargo.toml
post-exploit-loader/: CMakeLists.txt  Makefile  arm64-linux-toolchain.cmake  building.txt  extract_shellcode.py  gen_exploit.py  main-asm.c  main-asm.s  main.c  python-test-server.py  test-file  toast.template
rust_program/: Cargo.toml
whatsapp-databases/: _jobqueue-WhatsAppJobManager-shm  _jobqueue-WhatsAppJobManager-wal  axolotl.db  axolotl.db-shm  axolotl.db-wal  chatsettings.db-shm  chatsettings.db-wal  companion_devices.db-shm  companion_devices.db-wal  hsmpacks.db-shm  hsmpacks.db-wal  location.db-shm  location.db-wal  media.db-shm  media.db-wal  msgstore.db  msgstore.db-shm  msgstore.db-wal  payments.db-shm  payments.db-wal  statusranking.db-shm  statusranking.db-wal  stickers.db-shm  stickers.db-wal  wa.db-shm  wa.db-wal
(+487 files in other folders)
