[package]
name = "implant"
version = "0.1.0"
authors = ["connor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
egg-mode = "0.14.0"
tokio = { version = "0.2.0", features = ["full"] }
image = "0.23"
