[package]
name = "implant"
version = "0.1.0"
authors = ["connor"]
edition = "2018"

[profile.release]
opt-level="z"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmath = "0.1.4"
reqwest = { version = "0.10", features = ["json"] }
egg-mode = "0.14.0"
tokio = { version = "0.2.0", features = ["full"] }
image = "0.23"
nix = "0.17.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.8"
log = "0.4.8"
