[package]
name = "implant"
version = "0.1.0"
authors = ["connor"]
edition = "2018"

[profile.release]
opt-level="z"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmath = "0.1.4"
nix = "0.17.0"
log = "*"
hex = "*"
openssl = "0.10.29"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.8"
log = "0.4.8"
